# VitaDeploy

./: LICENSE  Makefile  README.md  create_vpk.sh
.github/: FUNDING.yml
cfgk/: CMakeLists.txt  cfgk.h  main.c  vdkernel.yml
cfgu/: CMakeLists.txt  FatFormatProxy.h  system_settings.xml  user.c  user.yml
launcher/: Makefile  main.c
main/: Archives.c  Archives.h  Makefile  crc32.c  graphics.c  graphics.h  head_bin.h  main.c  main.h  ops.c  promote.c  sha1.c  sha1.h  unzip.c
res/: enso_360.eo  enso_365.eo  imcunlock.self  imcunlock.skprx  mshell.self  naavls.skprx  template.xml  tiny_modoru.self  tiny_modoru.skprx  tiny_modoru.suprx  tv-cfg.txt  vs.sfo
tovs0/: Makefile  VD2VS0.vpk  graphics.h  main.c
